updated landing page

--- a/templates/landing_page/landing_page.html
+++ b/templates/landing_page/landing_page.html
@@ -12,5 +12,19 @@
 {% block content %}
 
 {% include 'includes/navbar.html' %}
+<div class="container-fluid" id="landing">
+    <div class="row">
+        <div class="col-md-12 landing_title">
+            <h1>Welcome to Nexify</h1>
+            <p>
+                Nexify is an software solution that aims to make communication more efficient, secure, and effective.
+            </p>
+            <a href="#" class="landing_get_started_btn">Get Started</a>
+        </div>
+        <div class="col-md-12 landing_image_container">
+            <img src="../../static/assets/img/landing/land.svg" alt="" class="landing_image">
+        </div>
+    </div>
+</div>
 
 {% endblock content %}
