--- a/static/assets/css/landing/landing.css
+++ b/static/assets/css/landing/landing.css
@@ -1,19 +1,31 @@
-.landing_login_btn{
-    background: linear-gradient(#fd749bc4,#281ac8b8);
-    border-radius: 10px;
+body{
+    background-color: black;
+}
+#landing{
+    width: 100%;
+    height: 90vh;
+}
+.landing_image_container{
+    width: 100%;
+    padding: 0;
+}
+.landing_image_container img{
+    height: 60vh;
+    width: 100%;
+}
+.landing_title{
     color: white;
-    padding: 5px 30px;
     text-align: center;
+    margin-top: 5vh;
+}
+.landing_title h1{
+    font-size: 4em;
+}
+.landing_get_started_btn{
+    background-color: #b82f8d;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
     text-decoration: none;
-    font-size: 16px;
-    border: none;
-}
-.nav-item .nav-link{
-    color: black;
-    border-bottom: 3px solid transparent;
-    font-weight: 700;
-    padding-bottom: 0;
-}
-.nav-link.active{
-    border-bottom: 3px solid #fd749bc4;
 }
