updated landing page full

--- a/static/assets/css/landing/landing.css
+++ b/static/assets/css/landing/landing.css
@@ -1,31 +1,140 @@
-body{
+body {
     background-color: black;
 }
-#landing{
+
+#landing {
     width: 100%;
     height: 90vh;
 }
-.landing_image_container{
+
+.landing_image_container {
     width: 100%;
     padding: 0;
 }
-.landing_image_container img{
+
+.landing_image_container img {
     height: 60vh;
     width: 100%;
 }
-.landing_title{
+
+.landing_title {
     color: white;
     text-align: center;
     margin-top: 5vh;
 }
-.landing_title h1{
+
+.landing_title h1 {
     font-size: 4em;
 }
-.landing_get_started_btn{
+
+.landing_get_started_btn {
     background-color: #b82f8d;
     color: white;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
     text-decoration: none;
+}
+
+#landing_about .row {
+    border-radius: 20px;
+    padding: 10px;
+}
+
+.landing_about_first {
+    background-color: #299afd;
+    color: white;
+}
+
+.landing_about_image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.landing_about_image img {
+    width: 70%;
+}
+
+.contact-form h2,
+.landing_about_title {
+    font-size: 3.5em;
+}
+
+.contact-form h2 {
+    color: #b82f8d;
+    font-size: 3.5em;
+    text-align: center;
+}
+
+
+/* Contact Info Section Styling */
+#landing_contact {
+    background-color: #b82f8d;
+    /* Brand color */
+    color: white;
+    padding: 2rem;
+}
+
+/* Contact Form Section Styling */
+.contact-form {
+    background-color: white;
+    padding: 2rem;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.contact-form .form-control {
+    border: none;
+    border-bottom: 2px solid #ccc;
+    border-radius: 0;
+    box-shadow: none;
+    font-size: 0.9rem;
+}
+
+.contact-form .form-control:focus {
+    border-color: #b82f8d;
+    box-shadow: none;
+}
+
+.contact-form button {
+    background-color: #b82f8d;
+    color: white;
+    font-weight: bold;
+    border: none;
+    padding: 0.75rem;
+    transition: background-color 0.3s;
+}
+
+.contact-form button:hover {
+    background-color: #b82f8d;
+}
+
+#landing_contact {
+    border-radius: none;
+}
+
+.landing_footer {
+    background-color: #b82f8d;
+    border-radius: none;
+    color: white;
+}
+
+.contact-info img {
+    height: min-content;
+}
+
+.landing_contact_details {
+    color: white;
+}
+
+.contact_details_card {
+    background-color: #b82f8d;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 5px;
 }
