--- a/static/assets/css/global/navbar.css
+++ b/static/assets/css/global/navbar.css
@@ -1,5 +1,7 @@
 nav {
   height: 10vh;
+  position: sticky;
+  top: 0;
 }
 
 .navbar {
@@ -69,4 +71,7 @@ nav {
   .navbar-nav .nav-link {
     padding: 0.5rem 0;
   }
+}
+*{
+  scroll-behavior: smooth;
 }
