--- a/static/assets/css/global/navbar.css
+++ b/static/assets/css/global/navbar.css
@@ -6,7 +6,7 @@ nav {
 
 .navbar {
   background-color: #000;
-  padding: 1rem 2rem;
+  padding: 1rem 0rem;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
 }
 
@@ -57,19 +57,27 @@ nav {
   border-radius: 5px;
   transition: background-color 0.3s ease;
 }
-
+.login_landing_btn{
+  display: none;
+}
 .landing_login_btn:hover {
   background-color: #b82f8d;
   color: #fff;
 }
-
+.navbar-nav{
+  opacity: 0;
+  pointer-events: none;
+}
 @media (max-width: 992px) {
-  .navbar-nav {
-    text-align: center;
+  .navbar-collapse{
+    display: none;
+    visibility: none;
   }
-
-  .navbar-nav .nav-link {
-    padding: 0.5rem 0;
+  .login_landing_btn{
+    display: block;
+  }
+  .navbar-toggler{
+    display: none;
   }
 }
 *{
