--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,7 +10,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="login_landing_btn">
-      <button onclick="window.location.href='{% url 'account_email' %}'"  class="landing_login_btn" type="button">Login</button>
+      <button onclick="window.location.href='{% url 'home:home' %}'"  class="landing_login_btn" type="button">Login</button>
     </div>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="width: 100%;justify-content: center;gap: 25px;">
@@ -25,7 +25,7 @@
         </li>
       </ul>
       <form class="d-flex">
-        <button onclick="window.location.href='{% url 'account_email' %}'"  class="landing_login_btn" type="button">Login</button>
+        <button onclick="window.location.href='{% url 'home:home' %}'"  class="landing_login_btn" type="button">Login</button>
       </form>
     </div>
   </div>
