--- a/templates/landing_page/landing_page.html
+++ b/templates/landing_page/landing_page.html
@@ -19,7 +19,7 @@ Onboarding
             <p>
                 Nexify is an software solution that aims to make communication more efficient, secure, and effective.
             </p>
-            <a href="{% url 'account_login' %}" class="landing_get_started_btn">Get Started</a>
+            <a href="{% url 'home:home' %}" class="landing_get_started_btn">Get Started</a>
         </div>
         <div class="col-md-12 landing_image_container">
             <img src="../../static/assets/img/landing/land.svg" alt="" class="landing_image">
