updated profile page

--- a/templates/apps/home/profile.html
+++ b/templates/apps/home/profile.html
@@ -1,17 +1,33 @@
 {% extends "allauth/layouts/main_base.html" %}
 {% load i18n %}
 {% load static %}
+{% load markdownify %}
 {% load allauth account %}
 {% block head_title %}
 {% trans "Profile" %}
 {% endblock head_title %}
 {% block stylesheet %}
 <link rel="stylesheet" href="{% static 'assets/css/home/profile.css' %}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.1.0/github-markdown.min.css">
 {% endblock stylesheet %}
 {% block pages %}
 
-<section>
-    hii
+<section class="section_profile">
+    <div class="row g-2">
+        <div class="col-md-4 section_profile_left">
+            <div class="profile_image">
+                <img src="https://wallpaperaccess.com/full/90977.jpg" alt="">
+            </div>
+        </div>
+        <div class="col-md-8 section_profile_right">
+            <div class="markdown-body">
+                {{ readme_html|safe }}
+            </div>
+            
+            <a href="{% url 'home:readme_edit' %}" class="btn edit_readme_btn">Edit README</a>
+        </div>
+
+    </div>
 </section>
 
 {% endblock pages %}
