--- a/templates/allauth/layouts/main_base.html
+++ b/templates/allauth/layouts/main_base.html
@@ -65,9 +65,15 @@
                 </script>
             {% endif %}
             {% include 'includes/main_navbar.html' %}
-            <div class="main_container_of_pages">
-                {% block pages %}
-                {% endblock pages %}
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12 p-0">
+                        <div class="main_container_of_pages">
+                            {% block pages %}
+                            {% endblock pages %}
+                        </div>
+                    </div>
+                </div>
             </div>
         {% endblock body %}
         {% block extra_body %}
