--- a/static/assets/css/home/profile.css
+++ b/static/assets/css/home/profile.css
@@ -2,19 +2,23 @@
     padding-right: 1rem;
 }
 .section_profile_right{
-    border: 1px solid #a19f9f;
-    padding: 1rem;
+    padding: 0 0 0 1rem;
     border-radius: 5px;
     position: relative;
 }
 .readme-content{
     width: 100%;
 }
+.markdown-body{
+    padding: 1rem;
+    border-radius: 1rem;
+}
 .edit_readme_btn{
     position: absolute;
     top: 1rem;
     right: 1rem;
-    background-color: #b82f8d;
+    background-color: #0c1117;
+    border: 1px solid #a19f9f;
     color: white;
 }
 .edit_readme_btn:hover{
@@ -25,10 +29,72 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
-.profile_image img{
-    width: 300px;
+    position: relative;
     height: 300px;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+}
+.profile_image .profile_background_image{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.profile_image .profile_image_pic{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     border: 2px solid #a19f9f;
+}
+
+.edit_profile_btn{
+    width: 100%;
+    border: 1px solid #a19f9f;
+    border-radius: 5px;
+    color: white;
+    background-color: #0c1117;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+.section_profile_left{
+    background-color: #0c1117;
+    padding: 1rem;
+    padding-top: 0;
+    border-radius: 1rem;
+}
+.section_profile_left p{
+    color: rgb(213, 211, 211);
+}
+.section_profile_left p b svg{
+    margin-right: 1rem;
+}
+.profile_achievements{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    flex-wrap: wrap;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+.profile_recent_activity span,
+.profile_achievements span{
+    background-color: grey;
+    border: 1px solid white;
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+}
+.profile_recent_activity{
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.profile_recent_activity p{
+    text-align: center;
 }
