--- a/templates/includes/main_navbar.html
+++ b/templates/includes/main_navbar.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="{% static 'assets/css/global/main_navbar.css' %}">
 <nav class="navbar main_navbar">
     <ul class="navbar__menu">
-      <li class="navbar__item">
+      <li class="navbar__item {% if request.path == '/home/' %} navbar__item__new__background {% endif %}">
         <a href="#" class="navbar__link"><i data-feather="home"></i><span>Home</span></a>
       </li>
       <li class="navbar__item">
