--- a/static/assets/css/global/main_navbar.css
+++ b/static/assets/css/global/main_navbar.css
@@ -1148,3 +1148,11 @@ body {
 hr{
   opacity: 1 !important;
 }
+::-webkit-scrollbar{
+  width: 10px !important;
+}
+::-webkit-scrollbar-track{
+  background-color: #19232f !important;
+  border-radius: 1rem;
+  width: 6px !important;
+}
